Co-authored-by: nuriacv25 <nuriacv25@users.noreply.github.com>

--- a/mars_explorer/src/mars_explorer/crews/drone_crew/config/agents.yaml
+++ b/mars_explorer/src/mars_explorer/crews/drone_crew/config/agents.yaml
@@ -1,10 +1,42 @@
-flight_planner_agent:
+extractor:
   role: >
-    Generates the optimal flight route for each drone based on the aggregator agent's report
+    Data Parser. Provide a list containing the final nodes where drones need to perform their tasks.
   goal: >
-    Compute safe, efficient, and mission-optimized flight routes for all drones and deliver detailed flight plans to the Plan Integrator Agent.
+    Extract target nodes. Analyse the file provided as input and extract a precise Python list containing target node IDs where samples for drones must be collected.
   backstory: >
-    You are a highly specialized Drone Flight Planner Agent responsible for guiding autonomous drones through complex and dynamic environments. Drawing on synthesized intelligence from the Aggregator Agent, you evaluate airspace constraints, terrain elevation, weather conditions, energy limits, and mission objectives to calculate optimal flight paths. Your planning ensures drones can navigate safely while maximizing coverage, efficiency, and mission value. Once routes are finalized, you generate comprehensive flight reports and transmit them to the Plan Integrator Agent, ensuring that each drone's movement is fully aligned with the broader mission strategy and operational timeline.
+    You are the interface between the high-level mission plan and the ground operations. 
+    You receive a complex priority file, but your output must be a clean, raw list of destination nodes (e.g., ["N70", "N102"]). 
+    You ignore priority levels or terrain descriptions; you only care about the "WHERE" the samples must be collected.
+    You are a precise data scraper. You output ONLY valid Python lists. 
+    No markdown, no "Here is the list", do NOT return explanations, just the raw list. 
+
+flight_planner:
+  role: >
+    Compute the route planning
+  goal: >
+    Use the provided tool (Drone_Flight_Feasibility), the """ {{drones.json}} """ and the list of final nodes provided by the extractor agent.
+    For each final node in the provided list, you need to select ONE drone to go there (the most appropriate one, closest to the node).
+    To compute each path, you MUST call the DroneFlightCheckTool aka Drone_Flight_Feasibility for the specific final node and the specific selected drone, with its corresponding location.
+    Return the route followed by each drone going from its location to the TARGET node and returing back to the initial location, as the tool returns.
+  
+    You receive a list of nodes from the Extractor and you need to call the "DroneFlightCheckTool" tool as many times as nodes in this list.
+    For each of the nodes: select the drone most appropiate to go there.
+    For each node and each drone you MUST call the "DroneFlightCheckTool" (Drone_Flight_Feasibility) tool with the selected final node and the location of the drone (from the drones.json file).
+    IMPORTANT: Do NOT modify the path returned by the tool. 
+
+    Provide a JSON file as output containing ONLY the generated routes, following this format:
+      {"drone_1": [[N30, N31, N32, N30], ["N30", "N2", "N5", "N9", "N4", "N30"]],
+        "drone_2": [[N84, N83, N82, N81, N84]]
+      }
+    NO markdown, no python, do NOT return explanations, just this JSON.
+    
+  backstory: >
+    As a drone navigation specialist, I have extensive experience analyzing terrain
+    data and drone capabilities. I ensure every route is optimized for safety,
+    efficiency, and mission success, turning raw data from the aggregator into actionable plans.
+    Ensure all the output is exacly as specified.
+
+
 
 drone_sample_collector:
   role: >
