--- a/mars_explorer/src/mars_explorer/crews/rover_crew/config/tasks.yaml
+++ b/mars_explorer/src/mars_explorer/crews/rover_crew/config/tasks.yaml
@@ -1,12 +1,25 @@
+final_nodes:
+  description: >
+    Based on the information inside the input file """ {{report_priority}} """, identify in which nodes rovers need to perform their tasks.
+  expected_output: >
+    A Python list containing all the node IDs where rovers need to perform their tasks.
+  agent: extractor
+
+
 reporting_route:
   description: >
-    Generates a detailed report of the planned rover routes.
-    Includes all necessary information for executing the route, 
-    computing the optimal path whether for collecting samples or deploying sensors based on the GraphML document. 
-    Sends the report to the plan integrator agent. GraphML document: {{mars_graph}}
+    For each node in the provided list, choose 1 rover among the provided in the """ {{rovers}} """ input file.
+    For each node-rover pair, you MUST use the tool RoverPathfindingTool to calculate the path. Do NOT modify the path provided by such tool.
+    The routes are computed from the location of the rover (base) to the selected final node, and then back to the base. Don't modify this path, just store it!.
+    For each rover provide the paths returned by the tool.
   expected_output: >
-    A detailed report containing the optimal route for each rover.
+    A JSON with this format:
+      {"rover_1": [[N30, N31, N32, N30], ["N30", "N2", "N5", "N9", "N4", "N30"]],
+         "rover_2": [[N84, N83, N82, N81, N84]]
+        }
   agent: route_planner
+
+
 
 
 reporting_sampling:
